--- a/pages/monster.html
+++ b/pages/monster.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Monster</title>
+    <title>Игра</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
+    <link rel="stylesheet" href="../css/lessons.css">
     <link rel="stylesheet" href="../css/monster.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="wrapper">
     <div class="header">
-        <div class="container">
+       <div class="container">
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
@@ -33,23 +35,26 @@
         </div>
     </div>
 </div>
-<canvas id="canvas"></canvas>
 
-<div class="modal">
-    <div class="modal_dialog">
-        <div class="modal_content">
-            <form action="#">
-                <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
-            </form>
+ <div class="game-container" id="gameContainer">
+        <div class="road">
+            <div id="road" class="road-image"></div>
         </div>
-    </div>
-</div>
+        <div class="car" id="car">
+            <img src="https://raw.githubusercontent.com/Depressedkidd/project_for_radomir/60fdfcdc15432dc4fe7bf97b8ce381999760ec3d/project_for_second_kurs/program_CAR/car_topview.svg" id="animation">
+        </div>
 
+        <div class="scoreboard">Счет: <span id="score">0</span></div>
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close"><a href="../index.html" style="text-decoration: inherit; color: var(--orange);">&times;</a></span>
+              <p class="you_win">You win!</p>
+              <button class="btn_play_again" id="resetButton">Play Again</button>
+            </div>
+          </div>
+
+ </div>
+    <script src="../js/monster.js"></script>
 </body>
-<script src="../js/monster.js"></script>
-<script src="../js/modal.js"></script>
 </html>
