--- a/pages/cards.html
+++ b/pages/cards.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Works</title>
+    <title>Cards</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
-    <link rel="stylesheet" href="../css/home_works.css">
+    <link rel="stylesheet" href="../css/cards.css">
 </head>
 <body>
-
 <div class="wrapper">
     <div class="header">
         <div class="container">
@@ -26,7 +25,7 @@
                         <a href="../pages/lessons.html">Тренировка к GEEKS</a>
                     </li>
                     <li class="menu_link">
-                         <a href="cards.html">Cards</a>
+                        <a href="cards.html">Cards</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -34,48 +33,11 @@
         </div>
     </div>
 
-    <div class="gmail_block">
-        <div class="container">
-            <h3>Home work 1 (part 1)</h3>
-            <div class="inner_gmail_block">
-                <div class="form_gmail">
-                    <label for="gmail_input"></label>
-                    <input type="text" id="gmail_input" placeholder="your gmail">
-                    <button class="btn" id="gmail_button">Проверь свой ник</button>
-                    <span class="checker" id="gmail_result"></span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="move_block">
-        <div class="container">
-            <h3>Home work 1 (part 2)</h3>
-            <div class="inner_move_block">
-                <div class="parent_block">
-                    <div class="child_block"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-  <div class="stopwatch">
-    <div class="container">
-        <h3>Home work 2 </h3>
-        <div class="time">
-            <div class="time_block">
-                <div class="interval" id="ml-secondsS">00.0</div>
-            </div>
-        </div>
-        <div class="time_buttons">
-            <button class="btn" id="start">Start</button>
-            <button class="btn" id="stop">Stop</button>
-        </div>
-    </div>
-</div>
+    <div class="cards"></div>
 
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+            <a href="#" target="_blank">
                 <div class="inner_footer">
                     <h2>Made by RZPY97</h2>
                 </div>
@@ -83,7 +45,6 @@
         </div>
     </div>
 </div>
-
 <div class="modal">
     <div class="modal_dialog">
         <div class="modal_content">
@@ -97,8 +58,7 @@
         </div>
     </div>
 </div>
-
-</body>
-<script src="../js/home_works.js"></script>
+<script src="../js/cards.js"></script>
 <script src="../js/modal.js"></script>
+</body>
 </html>
