--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -26,7 +26,7 @@
                         <a href="../pages/lessons.html">Тренировка к GEEKS</a>
                     </li>
                     <li class="menu_link">
-                        <a href="https://t.me/NurDinBuy16" target="_blank">Связаться с Сенсеем</a>
+                         <a href="cards.html">Cards</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -147,7 +147,7 @@
         <div class="container">
             <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
                 <div class="inner_footer">
-                    <h2>Made by NurDinBuy</h2>
+                    <h2>Made by RZPY97</h2>
                 </div>
             </a>
         </div>
